--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <a href="https://www.linkedin.com/in/shreshtha-srivastava-312580250/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://github.com/Shreshtha03" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </div>
-                <a href="images/my resume.pdf" download class="btn btn2">Download CV</a>
+                <a href="images/Shreshtha_Resume.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right"></div>
             <form>
